--- a/app/modules/members/templates/members/auth/base_auth.html
+++ b/app/modules/members/templates/members/auth/base_auth.html
@@ -58,7 +58,7 @@
         {% if messages %}
           <div class="mb-2">
             {% for category, message in messages %}
-              <div class="alert alert-{{ 'warning' if category == 'danger' else category }}" role="alert">
+              <div class="alert alert-{{ category }}" role="alert">
                 {{ message }}
               </div>
             {% endfor %}
